--- a/hw3.ipynb
+++ b/hw3.ipynb
@@ -676,11 +676,137 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Manual Gradients and Updates"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "def read_data(name,mode):\n",
+    "    features = []\n",
+    "    labels = []\n",
+    "\n",
+    "    base_dir = os.getcwd()\n",
+    "    root = base_dir\n",
+    "    filename = '%s/%s_%s.csv' % (root,name,mode)\n",
+    "\n",
+    "    i = 0\n",
+    "    with open(filename,'rt') as f:\n",
+    "        for line in f:\n",
+    "            line = line.replace('\\n','')\n",
+    "            tokens = line.split(',')\n",
+    "            if i > 0:\n",
+    "                y = int(float(tokens[0]))\n",
+    "                x1 = float(tokens[1])\n",
+    "                x2 = float(tokens[2])\n",
+    "                features.append([x1,x2])\n",
+    "                labels.append(y)\n",
+    "            i = i + 1\n",
+    "    # return (np.array(features,dtype='float32'), np.array(labels,dtype='long'))\n",
+    "    return features, labels\n",
+    "\n",
+    "features_train, labels_train = read_data(dataset, 'train')  # Assuming the format is `datasetname_train.csv`\n",
+    "features_valid, labels_valid = read_data(dataset, 'valid')  # Assuming the format is `datasetname_train.csv`\n",
+    "features_test, labels_test = read_data(dataset, 'test')  # Assuming the format is `datasetname_train.csv`\n",
+    "\n",
+    "# 1. Define the dataset\n",
+    "# np.random.seed(42)\n",
+    "# X = np.random.rand(100, 2)  # 100 samples, 2 features\n",
+    "# y = (np.sum(X, axis=1) > 1).astype(float).reshape(-1, 1)  # Binary target (1 if sum > 1, else 0)\n",
+    "\n",
+    "# 2. Initialize weights and biases\n",
+    "input_size = 2\n",
+    "hidden_size = 3\n",
+    "output_size = 2\n",
+    "\n",
+    "W1 = np.random.randn(input_size, hidden_size) * 0.01  # Input to hidden weights\n",
+    "b1 = np.zeros((1, hidden_size))  # Hidden layer biases\n",
+    "W2 = np.random.randn(hidden_size, output_size) * 0.01  # Hidden to output weights\n",
+    "b2 = np.zeros((1, output_size))  # Output layer biases\n",
+    "\n",
+    "# Activation functions\n",
+    "def sigmoid(x):\n",
+    "    return 1 / (1 + np.exp(-x))\n",
+    "\n",
+    "def sigmoid_derivative(x):\n",
+    "    return sigmoid(x) * (1 - sigmoid(x))\n",
+    "\n",
+    "# 3. Forward pass\n",
+    "def forward(X):\n",
+    "    Z1 = np.dot(X, W1) + b1\n",
+    "    A1 = sigmoid(Z1)\n",
+    "    Z2 = np.dot(A1, W2) + b2\n",
+    "    A2 = sigmoid(Z2)\n",
+    "    return Z1, A1, Z2, A2\n",
+    "\n",
+    "# 4. Loss function (Binary Cross-Entropy)\n",
+    "def compute_loss(y_true, y_pred):\n",
+    "    m = y_true.shape[0]\n",
+    "    loss = -np.sum(y_true * np.log(y_pred) + (1 - y_true) * np.log(1 - y_pred)) / m\n",
+    "    return loss\n",
+    "\n",
+    "# 5. Backward pass\n",
+    "def backward(X, y, Z1, A1, Z2, A2):\n",
+    "    m = y.shape[0]\n",
+    "\n",
+    "    # Output layer gradients\n",
+    "    dA2 = -(y / A2 - (1 - y) / (1 - A2))  # Derivative of loss wrt A2\n",
+    "    dZ2 = dA2 * sigmoid_derivative(Z2)  # Derivative of A2 wrt Z2\n",
+    "    dW2 = np.dot(A1.T, dZ2) / m         # Derivative of Z2 wrt W2\n",
+    "    db2 = np.sum(dZ2, axis=0, keepdims=True) / m  # Derivative of Z2 wrt b2\n",
+    "\n",
+    "    # Hidden layer gradients\n",
+    "    dA1 = np.dot(dZ2, W2.T)             # Derivative of Z2 wrt A1\n",
+    "    dZ1 = dA1 * sigmoid_derivative(Z1)  # Derivative of A1 wrt Z1\n",
+    "    dW1 = np.dot(X.T, dZ1) / m          # Derivative of Z1 wrt W1\n",
+    "    db1 = np.sum(dZ1, axis=0, keepdims=True) / m  # Derivative of Z1 wrt b1\n",
+    "\n",
+    "    return dW1, db1, dW2, db2\n",
+    "\n",
+    "# 6. Update parameters\n",
+    "def update_params(W1, b1, W2, b2, dW1, db1, dW2, db2, lr=0.01):\n",
+    "    W1 -= lr * dW1\n",
+    "    b1 -= lr * db1\n",
+    "    W2 -= lr * dW2\n",
+    "    b2 -= lr * db2\n",
+    "    return W1, b1, W2, b2\n",
+    "\n",
+    "# Training loop\n",
+    "epochs = 100\n",
+    "learning_rate = 0.01\n",
+    "\n",
+    "for epoch in range(epochs):\n",
+    "    # Forward pass\n",
+    "    Z1, A1, Z2, A2 = forward(features_train)\n",
+    "\n",
+    "    # Compute loss\n",
+    "    loss = compute_loss(np.array(labels_train), A2)\n",
+    "\n",
+    "    # Backward pass\n",
+    "    dW1, db1, dW2, db2 = backward(np.array(features_train), np.array(labels_train), Z1, A1, Z2, A2)\n",
+    "\n",
+    "    # Update parameters\n",
+    "    W1, b1, W2, b2 = update_params(W1, b1, W2, b2, dW1, db1, dW2, db2, lr=learning_rate)\n",
+    "\n",
+    "    # Print loss every 100 epochs\n",
+    "    if epoch % 100 == 0:\n",
+    "        print(f\"Epoch {epoch}, Loss: {loss:.4f}\")\n",
+    "\n",
+    "# Verify with predictions\n",
+    "Z1, A1, Z2, A2 = forward(features_test)\n",
+    "predictions = (A2 > 0.5).astype(float)\n",
+    "accuracy = np.mean(predictions == labels_test)\n",
+    "print(f\"Training Accuracy: {accuracy:.2f}\")"
+   ]
   }
  ],
  "metadata": {
